packages/openneuro-app/src/sass/crn_app/_dashboard.datasets.scss
// Dashboard Tabs ========================

.tabs.nav.nav-pills > li {
    a {
        @include border-radius(0);
        transition: background .3s ease;
        padding: 10px 20px;
        font-size: 14px;
        text-transform: uppercase;

        .unread-badge {
            @include border-radius(10px);
            background: $notification-green;
            position: absolute;
            top: -10px;
            right: -6px;
            padding: 4px 0 0;
            font-size: 9px;
            line-height: 9px;
            text-align: center;
            width: 17px;
            height: 17px;
            color: $primary;
            color: var(--primary);
            font-weight: 600;
        }
    }

    &.navbar-right {
        a {
            color: $dashboard-tab-text-color;
            color: var(--dashboard-tab-text-color);
            padding: 5px;
            background: none;
            font-size: 12px;
            text-transform: uppercase;

            &:hover {
                background: none;
                color: $primary;
                color: var(--primary);
            }
        }

        .dropdown-menu {
            @include border-radius(0);
            border: 0;
            box-shadow: 1px 1px 3px $transparent3;
        }
    }
}

@include mobile {
    .tabs.nav.nav-pills > li {
        a { 
            display: none;
        }
    }
}

// Dashboard and Admin sort and filter ========================

.filters-sort-wrap {
    width: 100%;
    float: none;
    padding: 0;
    background: $f9;
    border-bottom: 1px solid $ddd;

    .filters {
        float: left;
        text-align: right;
        margin: 0;
        position: relative;
        padding: 0 10px;
        @media (min-width: 1080px) {
            margin-left: 60px;
        }
        label {
            margin: 0;
            text-transform: uppercase;
            font-size: 10px;
            font-weight: 600;
            color: $c-77;
            text-align: center;
            padding: 10px;
        }
        button {
            @extend %btn-filter;
            border: 1px solid #c2c2c2;
            border-width: 0 1px;

            &.filter-all {
                //text-transform: uppercase;
                font-size: 12px;
                font-weight: 600;
            }

            &:hover,
            &:focus {
                outline: 0;
            }

            &:active,
            &.active,
            &:hover {
                background: $eee;
                color: $primary;
                color: var(--primary);

                &.filter-shared {
                    color: $brand-info;
                }

                &.filter-public {
                    color: $brand-success;
                }

                &.filter-incomplete {
                    color: darken($brand-warning, 10%);
                }

                &.filter-invalid {
                    color: $brand-danger;
                }
            }

            .filter-text {
                font-size: 12px;
                font-weight: 600;
                margin-left: 5px;
                position: relative;
            }

            .filter-admin{
                i{
                    width: 12px;
                    margin: 0;
                    font-size: 11px;
                }
            }
        }
    }

    .sort {
        float: left;
        padding: 0;
        margin: 0;
        position: relative;
        white-space: nowrap;

        label {
            margin: 0;
            text-transform: uppercase;
            font-size: 10px;
            font-weight: 600;
            color: $c-77;
            text-align: right;
            float: left;
            padding: 10px 10px 10px 10px;
        }

        a {
            @extend %btn-sort;

            &.name,
            &.date {
                border: 1px solid $c2;
                border-width: 0 1px;
                text-align: center;
                display: inline-block;
            }

            &.date {
                border-width: 0 1px 0 0;
            }

            .fa {
                position: relative;
                line-height: 0;
                top: 2px;
                padding: 0;
                font-size: 10px;

                &.fa-sort-desc {
                    top: -2px;
                }
            }
        }
    }
}
/* ... */

